// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component-controls generated Components/Button bound Template 1`] = `
<DocumentFragment>
  <button
    class="rounded-md focus:outline-none focus:shadow-outline bg-primary-500 text-white hover:bg-primary-600 py-4 px-8"
    type="button"
  >
    Button Label
  </button>
</DocumentFragment>
`;

exports[`component-controls generated Components/Button bound Template 2`] = `
<DocumentFragment>
  <button
    class="rounded-md focus:outline-none focus:shadow-outline bg-green-500 text-white hover:bg-green-600 py-4 px-8"
    type="button"
  >
    Button Label
  </button>
</DocumentFragment>
`;

exports[`component-controls generated Components/Button bound Template 3`] = `
<DocumentFragment>
  <button
    class="rounded-md focus:outline-none focus:shadow-outline bg-yellow-500 text-white hover:bg-yellow-600 py-4 px-8"
    type="button"
  >
    Button Label
  </button>
</DocumentFragment>
`;

exports[`component-controls generated Components/Button bound Template 4`] = `
<DocumentFragment>
  <button
    class="rounded-md focus:outline-none focus:shadow-outline bg-red-500 text-white hover:bg-red-600 py-4 px-8"
    type="button"
  >
    Button Label
  </button>
</DocumentFragment>
`;

exports[`component-controls generated Components/Button bound Template 5`] = `
<DocumentFragment>
  <button
    class="rounded-md focus:outline-none focus:shadow-outline bg-primary-500 text-white hover:bg-primary-600 py-4 px-8 w-full"
    type="button"
  >
    Button Label
  </button>
</DocumentFragment>
`;

exports[`component-controls generated Components/Button bound Template 6`] = `
<DocumentFragment>
  <button
    class="rounded-md focus:outline-none focus:shadow-outline bg-primary-500 text-white hover:bg-primary-600 py-4 px-8"
    type="button"
  >
    Button Label
  </button>
</DocumentFragment>
`;

exports[`component-controls generated Components/Button bound Template 7`] = `
<DocumentFragment>
  <button
    class="rounded-md focus:outline-none focus:shadow-outline bg-primary-500 text-white hover:bg-primary-600 py-2 px-6"
    type="button"
  >
    Button Label
  </button>
</DocumentFragment>
`;
